# TransparentTorProxy

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  DYNAMIC_ANALYSIS_POLICY.md  HALL_OF_FAME.md  LICENSE  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SAST_POLICY.md  SCA_POLICY.md  SECRETS_POLICY.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  fix_final_tests.py  install.sh  pyproject.toml  restore-network.sh  uninstall.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql.yml  fuzzing.yml  release.yml  security-scan.yml
assets/favicon/: site.webmanifest
docs/: TDD.md  architecture.md  bridges.md  documentation-policy.md  install-alternatives.md  interfaces.md  profiles.md  security-assessment.md  verification.md
docs/decisions/: 0001-volatile-standard-core.md  0002-stateless-dns-overlay.md  0003-watchdog-emergency-killswitch.md  0004-split-tunneling-uid-gid.md  0005-tor-bridge-support.md  0006-subprocess-orchestration.md  0007-ruleset-testing-with-nse.md  0008-byod-architecture.md  0009-systemd-resolved-bypass.md  README.md
fuzzing/: fuzz_target.py
packaging/: PKGBUILD  SHA256SUMS.txt.asc  build_deb.sh  build_rpm.sh  release.sh  transparent-tor-proxy.sysusers  transparent_tor_proxy-0.4.0-py3-none-any.whl  transparent_tor_proxy-0.4.5-py3-none-any.whl  ttp.service  ttp.spec
scripts/: install.sh  restore-network.sh  uninstall.sh  verify.sh
scripts/vm/: Dockerfile.arch.test  Dockerfile.debian.test  Dockerfile.fedora.test  run_integration_tests.sh  send.sh  snapshot.sh  start.sh
tests/: __init__.py  chaos_monkey.py  test_cli.py  test_dns.py  test_firewall.py  test_firewall_rules.py  test_integration.py  test_nse_rules.py  test_resources.py  test_selinux_strategy.py  test_state.py  test_system_info.py  test_tor_control.py  test_tor_detect.py  test_tor_install.py  test_watchdog.py
tests/leak/: test_dns_leak.py  test_ip_leak.py  test_webrtc_leak.py
ttp/: __init__.py  cli.py  dns.py  exceptions.py  firewall.py  state.py  system_info.py  tor_control.py  tor_detect.py  tor_install.py  watchdog.py
ttp/commands/: __init__.py  _common.py  admin.py  lifecycle.py  session.py  start.py  stop_restart.py  watchdog.py
ttp/resources/: __init__.py
ttp/resources/polkit/: 50-ttp-watchdog.rules
ttp/resources/selinux/: ttp_tor_policy.te
vm-helpers/: Dockerfile.arch.test  run_integration_tests.sh  send.sh  snapshot.sh  start.sh
