[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transparent-tor-proxy"
version = "0.1.1"
description = "Transparent Tor Proxy — route all system traffic through Tor"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "stem>=1.8.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
ttp = "ttp.cli:app"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that require root and a real Tor instance",
]
filterwarnings = [
    "ignore:setDaemon\\(\\) is deprecated:DeprecationWarning:stem.*"
]

[tool.hatch.build.targets.wheel]
packages = ["ttp"]