[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transparent-tor-proxy"
version = "0.4.6"
description = "Transparent Tor Proxy - route all system traffic through Tor"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "stem>=1.8.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "bump-my-version>=0.20.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
ttp = "ttp.cli:app"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that require root and a real Tor instance",
    "leak: marks tests as offensive leak verification tests",
    "nse: marks tests that require root, NSE, and network namespace privileges",
]
addopts = "--ignore=tests/leak -m \"not integration and not nse\""
filterwarnings = [
    "ignore:setDaemon\\(\\) is deprecated:DeprecationWarning:stem.*"
]

[tool.hatch.build.targets.sdist]
include = [
    "ttp",
    "assets",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    "tests",
    "scripts",
    "packaging",
    "dist",
    "build",
    "*.qcow2",
    "*.iso",
    "*.img",
    "venv",
    ".venv",
    "__pycache__"
]

[tool.hatch.build.targets.wheel]
packages = ["ttp"]

[tool.bumpversion]
current_version = "0.4.6"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "ttp/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "packaging/PKGBUILD"
search = "pkgver={current_version}"
replace = "pkgver={new_version}"

[[tool.bumpversion.files]]
filename = "README.md"
search = "transparent-tor-proxy_{current_version}_all.deb"
replace = "transparent-tor-proxy_{new_version}_all.deb"

[[tool.bumpversion.files]]
filename = "README.md"
search = "transparent-tor-proxy-{current_version}-1"
replace = "transparent-tor-proxy-{new_version}-1"
